--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
+<!--  
+  <div class="circulo">
+   
+  </div> -->
+  <button class="botao">clique</button>
   <script src="script.js">
   </script>
 </body>
